@@ -1,0 +1,8 @@
+---
+nfs::is_server : true
+nfs::nfsv3 : false
+nfs::firewall : false
+nfs::stunnel : false
+nfs::tcpwrappers : false
+nfs::secure_nfs: true
+nfs::kerberos: true
